check when notebook's last_modified stops changing as terminal doesn’t continuously print output causing websocat to silently terminate

--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -72,7 +72,7 @@ jobs:
     container: 
       image: vnmd/neurodesktop:latest
       volumes:
-        - ${{ github.workspace }}:/home/
+        - /home/runner/:/home/
         - neurodesk-home:/home/jovyan
       options: --user root --privileged --shm-size=1gb
       env:
