--- a/.github/workflows/test_changed_notebook_papermill.yml
+++ b/.github/workflows/test_changed_notebook_papermill.yml
@@ -19,9 +19,6 @@ on:
   # Trigger the workflow on manual dispatch
   workflow_dispatch:
 
-vars:
-  TIMEOUT: 1500
-
 jobs:
   select-runner:
     runs-on: ubuntu-22.04
@@ -72,8 +69,9 @@ jobs:
     needs: [ select-runner, get-notebooks ]
     if: ${{ needs.get-notebooks.outputs.notebook_list != '[]' }}
     runs-on: ${{ needs.select-runner.outputs.runner }}
-
-    timeout-minutes: ${{ vars.TIMEOUT }}
+    env:
+      TIMEOUT: 1500
+    timeout-minutes: 1500
     strategy:
       fail-fast: false
       matrix:
@@ -266,7 +264,7 @@ jobs:
         execute_command "papermill $NOTEBOOK_NAME $OUTPUT_NAME --kernel python3 > papermill.log 2>&1 & echo \$! > papermill.pid" 30
 
         # Poll the Jupyter Contents API for notebook completion
-        MAX_WAIT=$(( ${{ vars.TIMEOUT }} * 60 ))   # max seconds to wait (25 hours)
+        MAX_WAIT=$(( ${{ env.TIMEOUT }} * 60 ))   # max seconds to wait (25 hours)
         CHECK_INTERVAL=100       # check every 100 seconds
 
         echo "⏳ Waiting for notebook execution to complete (timeout: $((MAX_WAIT/60)) min)..."
