--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -20,12 +20,18 @@ on:
     types: [ opened, synchronize, reopened, ready_for_review ]
   # Trigger the workflow on manual dispatch
   workflow_dispatch:
+    inputs:
+      image_override:
+        description: 'Override the Docker image (e.g. vnmd/neurodesktop:2024-01-01)'
+        required: false
+        type: string
 
 jobs:
   select-runner:
     runs-on: ubuntu-22.04
     outputs:
       runner: ${{ steps.select_runner.outputs.runner }}
+      neurodesk_image: ${{ steps.get_image.outputs.neurodesk_image }}
     steps:
       - uses: actions/checkout@v4
       - name: Select runner
@@ -35,6 +41,16 @@ jobs:
             echo "runner=self-hosted" >> $GITHUB_OUTPUT
           else
             echo "runner=ubuntu-22.04" >> $GITHUB_OUTPUT
+          fi
+      - name: Get Neurodesk Image
+        id: get_image
+        run: |
+          if [ -n "${{ inputs.image_override }}" ]; then
+            echo "neurodesk_image=${{ inputs.image_override }}" >> $GITHUB_OUTPUT
+          else
+            curl -s https://raw.githubusercontent.com/neurodesk/neurodesk.github.io/main/data/neurodesktop.toml -o neurodesktop.toml
+            VERSION=$(grep 'jupyter_neurodesk_version' neurodesktop.toml | cut -d '"' -f 2)
+            echo "neurodesk_image=vnmd/neurodesktop:$VERSION" >> $GITHUB_OUTPUT
           fi
           
   get-notebooks:
@@ -72,7 +88,7 @@ jobs:
     if: ${{ needs.get-notebooks.outputs.notebook_list != '[]' }}
     runs-on: ${{ needs.select-runner.outputs.runner }}
     container: 
-      image: vnmd/neurodesktop:latest
+      image: ${{ needs.select-runner.outputs.neurodesk_image }}
       volumes:
         - /home/runner/:/home/
       options: --user root
@@ -142,10 +158,10 @@ jobs:
 
   build-structure:
     if: ${{ needs.test-notebooks.result != 'failure' }}
-    needs: [ test-notebooks ]
+    needs: [ test-notebooks, select-runner ]
     runs-on: ubuntu-22.04
     container: 
-      image: vnmd/neurodesktop:latest
+      image: ${{ needs.select-runner.outputs.neurodesk_image }}
       volumes:
         - /home/runner/:/home/
       options: --user root
