Update url to from www.neurodesk.org to neurodesk.org

--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -150,7 +150,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./books/_build/**/**/html
         keep_files: true
-        cname: www.neurodesk.org
+        cname: neurodesk.org
 
     - name: Clean build dir
       run: |
@@ -193,4 +193,4 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./books/_build/html
         keep_files: true
-        cname: www.neurodesk.org
+        cname: neurodesk.org
