--- a/.github/workflows/generate-doi.yml
+++ b/.github/workflows/generate-doi.yml
@@ -150,4 +150,4 @@ jobs:
             publish_dir: ./
             publish_branch: gh-pages
             keep_files: true
-            cname: www.neurodesk.org
+            cname: neurodesk.org
