--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -33,7 +33,7 @@ jobs:
       runner: ${{ steps.select_runner.outputs.runner }}
       neurodesk_image: ${{ steps.get_image.outputs.neurodesk_image }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - name: Select runner
         id: select_runner
         run: |
@@ -58,10 +58,10 @@ jobs:
     outputs:
       notebook_list: ${{ steps.list_changed_notebooks.outputs.notebook_list }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
     - name: Find all notebooks with changes
       id: find_changed_notebooks
-      uses: tj-actions/changed-files@v45.0.3
+      uses: tj-actions/changed-files@c3a1bb2c992d77180ae65be6ae6c166cf40f857c
       with:
         path: "./books"
         files: |
@@ -98,7 +98,7 @@ jobs:
       matrix:
         notebooks: ${{ fromJson(needs.get-notebooks.outputs.notebook_list) }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
 
     - name: Install dependencies
       shell: bash
@@ -144,7 +144,7 @@ jobs:
       run: git config --global http.postBuffer 524288000
       
     - name: Push to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4.0.0
+      uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e
       if: github.event_name != 'pull_request'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -166,7 +166,7 @@ jobs:
         - /home/runner/:/home/
       options: --user root
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
 
     - name: Install dependencies
       shell: bash
@@ -187,7 +187,7 @@ jobs:
 
 
     - name: Push to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4.0.0
+      uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e
       if: github.event_name != 'pull_request'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
