--- a/.github/workflows/generate-doi.yml
+++ b/.github/workflows/generate-doi.yml
@@ -56,8 +56,13 @@ jobs:
               NOTEBOOK_NAME=$(echo "${{ matrix.notebooks }}" | cut -d'/' -f3 | cut -d'.' -f1)
               echo "NOTEBOOK_NAME=$NOTEBOOK_NAME" >> $GITHUB_ENV
               NOTEBOOK_BUILDDATE="${NOTEBOOK_NAME}_${BUILDDATE}"
-              ssed -i "s/^        license = get_license(args.container_name, args.gh_token)/        license = 'mit'/" .github/scripts/publish-doi.py
-              if DOI_URL=$(python3 .github/scripts/publish-doi.py --container_filepath="https://raw.githubusercontent.com/Neurodesk/example-notebooks/refs/heads/main/${{ matrix.notebooks }}" --container_name=${NOTEBOOK_BUILDDATE} --zenodo_token=${{ secrets.ZENODO_TOKEN }} --gh_token=${{ secrets.GITHUB_TOKEN }} | tail -n 1)
+              sed -i "s/^        license = get_license(args.container_name, args.gh_token)/        license = 'mit'/" .github/scripts/publish-doi.py
+              if DOI_URL=$(python3 .github/scripts/publish-doi.py \
+                    --container_filepath="https://raw.githubusercontent.com/Neurodesk/example-notebooks/refs/heads/main/${{ matrix.notebooks }}" \
+                    --container_name=${NOTEBOOK_BUILDDATE} \
+                    --zenodo_token=${{ secrets.ZENODO_TOKEN }} \
+                    --gh_token=${{ secrets.GITHUB_TOKEN }} | tail -n 1)
+              then
                 echo "DOI_URL: $DOI_URL"
               else
                 echo "Failed to publish ${app} to Zenodo"
@@ -154,4 +159,4 @@ jobs:
             publish_dir: ./
             publish_branch: gh-pages
             keep_files: true
-            cname: www.neurodesk.org
+            cname: neurodesk.org
