--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -130,7 +130,13 @@ jobs:
         echo "DIRNAME=$(dirname ${{ matrix.notebooks }})"
         echo "NOTEBOOK=$(basename -s .ipynb ${{ matrix.notebooks }})" >> $GITHUB_ENV
         echo "DIRNAME=$(dirname ${{ matrix.notebooks }})" >> $GITHUB_ENV
-        jb build ${{ matrix.notebooks }}
+        
+        # Debugging
+        echo "Checking for jupyter-book..."
+        which jupyter-book || echo "jupyter-book not found in PATH"
+        ls -l /opt/conda/bin/jupyter-book || echo "/opt/conda/bin/jupyter-book not found"
+        
+        jupyter-book build ${{ matrix.notebooks }}
 
     - name: Restructure
       shell: bash
@@ -193,7 +199,7 @@ jobs:
         /bin/bash ../.github/scripts/write-toc-entry.sh
         sed -i 's/execute_notebooks: .*/execute_notebooks: off/' _config.yml
         cat _config.yml
-        jb build .
+        jupyter-book build .
 
 
     - name: Push to GitHub Pages
