Separate out force build and force deploy checkboxes

--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -25,8 +25,13 @@ on:
         description: 'Override the Docker image (e.g. ghcr.io/neurodesk/neurodesktop/neurodesktop:2024-01-01)'
         required: false
         type: string
-      force_rebuild:
-        description: 'Force execution of all notebooks and deploy to GitHub Pages'
+      force_execution:
+        description: 'Force execution of all notebooks'
+        required: false
+        type: boolean
+        default: false
+      force_deploy_pages:
+        description: 'Force deploy pages'
         required: false
         type: boolean
         default: false
@@ -80,7 +85,7 @@ jobs:
     - name: Filter down to changed notebooks
       id: list_changed_notebooks
       run: |
-        if [ "${{ inputs.force_rebuild }}" == "true" ]; then
+        if [ "${{ inputs.force_execution }}" == "true" ]; then
           echo "Forcing execution of all notebooks"
           changed_notebooks=$(find . -name "*.ipynb" | sed 's|^\./||')
         elif [ -n "${{ inputs.notebook_selector }}" ]; then
@@ -168,7 +173,7 @@ jobs:
       
     - name: Push to GitHub Pages
       uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e
-      if: github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch' || inputs.force_rebuild == true)
+      if: github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch' || inputs.force_deploy_pages == true)
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./books/_build/**/**/html
@@ -211,7 +216,7 @@ jobs:
 
     - name: Push to GitHub Pages
       uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e
-      if: github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch' || inputs.force_rebuild == true)
+      if: github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch' || inputs.force_deploy_pages == true)
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./books/_build/html
