Add workflows for testing changed notebooks in CVMFS and container environments

--- a/.github/workflows/test_changed_notebook_container.yml
+++ b/.github/workflows/test_changed_notebook_container.yml
@@ -1,6 +1,6 @@
 # This workflows executes new or modified example notebooks.
 
-name: test_changed_notebooks
+name: test_changed_notebooks_container
 
 defaults:
   run:
