--- a/.github/workflows/test_changed_notebook_cvmfs.yml
+++ b/.github/workflows/test_changed_notebook_cvmfs.yml
@@ -89,7 +89,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        mamba install -c conda-forge -y r-irkernel ipykernel -c pypi -y jupyter-book ghp-import
+        mamba install -c conda-forge -y r-irkernel ipykernel -c pypi -y "jupyter-book<2.0.0" ghp-import
 
     - name: Run ${{ matrix.notebooks }}
       shell: bash
@@ -140,7 +140,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        mamba install -c conda-forge -y r-irkernel ipykernel -c pypi jupyter-book ghp-import
+        mamba install -c conda-forge -y r-irkernel ipykernel -c pypi "jupyter-book<2.0.0" ghp-import
 
     - name: Run all
       shell: bash
