--- a/.github/workflows/test_changed_notebook_papermill.yml
+++ b/.github/workflows/test_changed_notebook_papermill.yml
@@ -529,7 +529,7 @@ jobs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        python -m pip install jupyter-book ghp-import 
+        python -m pip install "jupyter-book<2.0.0" ghp-import 
 
     - name: Run all
       shell: bash
